added settings button in top right, removed set preferences button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
 
     <string name="wake_up">Usual Wake up Time</string>
     <string name="bedtime">Usual Bedtime</string>
+    <string name="btnClearDrinkingHistory">btnClearDrinkingHistory</string>
+    <string name="btnResetCups">btnResetCups</string>
 </resources>
